# cmake_template

./: .gitignore  CMakeLists.txt  allbuild.sh  build.sh
src/test_hello/: CMakeLists.txt  Makefile  main.cpp
src/test_hello/hello/: hello.cpp  hello.h
src/thread_lib/: CMakeLists.txt  build.sh
src/thread_lib/include/: .zmutex.h.swp  zmutex.h
src/thread_lib/src/: .zmutex.cpp.swp  zmutex.cpp
src/utils/: noncopyable.h  utils.h  zexception.h
